--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,15 @@ add_executable(SmartPointers
         main.cpp
         mainwindow.cpp
         mainwindow.ui
-        source/Library.cpp
-        source/Book.cpp
-        source/User.cpp
+        classes/Library.cpp
+        classes/Book.cpp
+        classes/User.cpp
+        source/bookdialog.h
+        source/bookdialog.cpp
+        source/BookModel.h
+        source/BookModel.cpp
+        source/UserModel.cpp
+        source/UserModel.h
 )
 
 target_link_libraries(SmartPointers PRIVATE Qt6Core Qt6Gui Qt6Widgets)
